# speedometer

./: CMakeLists.txt  README.md
ESP/Client/: platformio.ini
ESP/Client/src/: main.c
ESP/Server/: platformio.ini  sdkconfig.esp32-c6-devkitc-1.old
ESP/Server/src/: main.c
desktop/client/: main.cpp
desktop/client/include/: canvas.h  comservice.h  positions.h  serialportservice.h  tcpservice.h  window.h
desktop/client/src/: canvas.cpp  comservice.cpp  serialportservice.cpp  tcpservice.cpp  window.cpp
desktop/server/: main.cpp
desktop/server/include/: comservice.h  config.h  serialportservice.h  tcpservice.h  window.h
desktop/server/src/: comservice.cpp  serialportservice.cpp  tcpservice.cpp  window.cpp
shared/: config.h  positions.h  settings.h
